# Authorium

./: .gitignore  CMakeLists.txt  LICENSE  README.md
AuthoriumCore/: CMakeLists.txt  Logger.h  Project.cpp  Project.h
AuthoriumUI/: .gitignore  AuthoriumUI_de_DE.ts  CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
AuthoriumUI/widgets/: textarea.cpp  textarea.h  textarea.ui
cmake/: standard.cmake  version.cmake
tests/: CMakeLists.txt
tests/src/core/: .ProjectTests.cpp.swp  ProjectTests.cpp
